@@ -43,45 +43,12 @@ void cpu_log(cpu_mips_t *cpu,char *module,char *format,...)
 #endif
 }
 
-void cpu_log7(cpu_mips_t *cpu,char *module,char *format,...)
-{
-
-	
-
-}
-
-void cpu_log8(cpu_mips_t *cpu,char *module,char *format,...)
-{
-	
-}
-void cpu_log9(cpu_mips_t *cpu,char *module,char *format,...)
-{
-/*	char buffer[256];
-	va_list ap;
-
-	va_start(ap,format);
-	snprintf(buffer,sizeof(buffer),"CPU%u: %s",cpu->id,module);
-	vm_flog(cpu->vm,buffer,format,ap);
-	va_end(ap);*/
-}
-
-void cpu_log6(cpu_mips_t *cpu,char *module,char *format,...)
-{
-	char buffer[256];
-	va_list ap;
-
-	va_start(ap,format);
-	snprintf(buffer,sizeof(buffer),"CPU%u: %s",cpu->id,module);
-	vm_flog(cpu->vm,buffer,format,ap);
-	va_end(ap);
-}
 
 
 /* Start a CPU */
 void cpu_start(cpu_mips_t *cpu)
 {
 	if (cpu) {
-		cpu_log6(cpu,"","pc fff %x\n",cpu->pc);
 		cpu->state = CPU_STATE_RUNNING;
 	}
 }
